--- a/app/views/habits/new.html.slim
+++ b/app/views/habits/new.html.slim
@@ -1,1 +1,6 @@
-h1 New Habit
+= form_with model: @habit do |f|
+  = f.label :title
+  = f.text_field :title
+  = f.label :description
+  = f.text_area :description
+  = f.submit 'Create'
