--- a/app/views/habits/new.html.slim
+++ b/app/views/habits/new.html.slim
@@ -1,3 +1,7 @@
+h1 New Habit
+
+= render 'shared/errors', resource: @habit
+
 = form_with model: @habit do |f|
   = f.label :title
   = f.text_field :title
